<resources>
    <string name="app_name">随便截</string>
    <string name="rationale_message">请将APP的各项权限开启</string>
    <string name="title_settings_perm">权限设置</string>
    <string name="setting">去设置</string>
    <string name="cancel">取消</string>

    <string name="config_address">首次使用需要配置服务器地址信息：</string>
    <string name="server_address">服务器地址</string>
    <string name="next_step">下一步</string>

    <string name="observer">随时听</string>
    <string name="init">随便截</string>
    <string name="account">账号</string>
    <string name="pos_hint">默认1</string>
    <string name="pos_curr">当前</string>
    <string name="total_hint">默认3000</string>
    <string name="offset_hint">默认 5</string>
    <string name="offset_curr">当前偏移量: 默认 0</string>
    <string name="start_ali">启动支付宝</string>
    <string name="start_wechat">启动微信</string>
    <string name="ali_accessibility_description">随便截支付宝辅助</string>
    <string name="wx_accessibility_description">随便截微信辅助</string>
    <string name="upload">上传</string>
    <string name="csv">生成CSV</string>
    <string name="stop_upload">停止并上传</string>
    <string name="switch_">切换打码</string>
    <string name="ali_version">支付宝版本</string>
    <string name="wechat_init">微信随便截</string>
    <string name="ali_login">支付宝登陆</string>
    <string name="input_address">请输入您的服务器地址：</string>
    <string name="address_des">(服务器地址由您的服务商提供)</string>
    <string name="init_ali">支付宝随便截</string>
    <string name="exit_account">退出账号</string>
    <string name="login">登陆</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version">版本：1.01</string>
</resources>
