<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_upload"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/stop_upload"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ali_version"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/ali_version"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_csv"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/csv"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/exit_account"
        app:showAsAction="never" />
</menu>
